fra-10 added dependencies

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -69,6 +69,14 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-rest-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-multipart</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
