--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # Your configuration properties
-quarkus.rest-client."at.htl.boundary.ImageResource".url=http://localhost:8010/
+quarkus.rest-client."at.htl.client.FileService".url=https://localhost:8010/
+quarkus.rest-client."at.htl.client.FileService".scope=javax.inject.Singleton
+
+quarkus.tls.trust-all=true
