fra-10 edit application.properties

--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Your configuration properties
-quarkus.rest-client."at.htl.client.FileService".url=https://localhost:8010/
-quarkus.rest-client."at.htl.client.FileService".scope=javax.inject.Singleton
+quarkus.http.port=8090
+
+quarkus.rest-client.file-upload-api.url=http://localhost:8080
+quarkus.rest-client.file-upload-api.scope=javax.inject.Singleton
 
 quarkus.tls.trust-all=true
