fra-17 modify application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 quarkus.http.limits.max-body-size=700M
+
+quarkus.rest-client.file-upload-api-server.url=http://localhost:8100
+quarkus.rest-client.file-upload-api-server.scope=javax.inject.Singleton
+
+quarkus.tls.trust-all=true
