--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -77,6 +77,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-multipart</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-qute</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
