fra-6 add gh-action building slides

--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -1,6 +1,15 @@
 name: Build
-uses: quirinecker/asciidoctor-convert-action@1.0
-with:
-  slides: true
-  inputPath: input
-  outputPath: output
+on:
+  push:
+    branches: [main]
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: quirinecker/asciidoctor-convert-action@1.0
+        with:
+          slides: true
+          inputPath: input
+          outputPath: output
