--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -1,17 +1,14 @@
 name: Build
-on:
-  push:
-    branches: [main]
+on: [push]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: quirinecker/asciidoctor-convert-action@1.0
+      - name: build-slides
+        uses: quirinecker/asciidoctor-convert-action@1.0
         with:
           slides: true
           inputPath: input
           outputPath: output
-      - run: |
-          #sudo chmod +x ./docker-scripts/docker-convert.sh
-          #sudo ./docker-scripts/docker-convert.sh
