--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Your configuration properties
 quarkus.http.port=8090
+%prod.quarkus.http.port=9090
 
 quarkus.rest-client.file-upload-api.url=http://localhost:8080
 quarkus.rest-client.file-upload-api.scope=javax.inject.Singleton
