fra-52 add endpoints

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-reactive-pg-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-reactive</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
