--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,13 +5,13 @@ quarkus.http.limits.max-body-size=700M
 
 quarkus.tls.trust-all=true
 
-#quarkus.datasource.db-kind=postgresql
-#quarkus.datasource.username=app
-#quarkus.datasource.password=app
-#quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/db
-#
-#quarkus.datasource.devservices.enabled=false
-#quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=app
+quarkus.datasource.password=app
+quarkus.datasource.reactive.url=postgresql://localhost:5432/postgres
+
+quarkus.datasource.devservices.enabled=false
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 #quarkus.http.root-path=/api
 
