--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -6,4 +6,7 @@ quarkus.http.port=8090
 quarkus.rest-client.file-upload-api.url=http://localhost:8080
 quarkus.rest-client.file-upload-api.scope=javax.inject.Singleton
 
+quarkus.rest-client.client-api.url=http://localhost:8080
+quarkus.rest-client.client-api.scope=javax.inject.Singleton
+
 quarkus.tls.trust-all=true
