--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -9,4 +9,7 @@ quarkus.rest-client.file-upload-api.scope=javax.inject.Singleton
 quarkus.rest-client.client-api.url=http://localhost:8080
 quarkus.rest-client.client-api.scope=javax.inject.Singleton
 
+quarkus.rest-client.login-examinee-api.url=http://localhost:8080
+quarkus.rest-client.login-examinee-api.scope=javax.inject.Singleton
+
 quarkus.tls.trust-all=true
