fra-47 update endpoint get exams

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,8 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 #quarkus.http.root-path=/api
 
+quarkus.rest-client.webuntis.url=https://mese.webuntis.com/WebUntis/jsonrpc.do
+quarkus.rest-client.webuntis.scope=javax.inject.Singleton
+
+
 quarkus.http.cors=true
