fra-86 changed endpoint for client

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,10 @@
             <groupId>org.eclipse.microprofile.rest.client</groupId>
             <artifactId>microprofile-rest-client-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
