--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,17 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-orm-panache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-jsonb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedream</groupId>
+            <artifactId>untis4j</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/lib/untis4j-1.3.0-withDependencies.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
