--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,8 +15,8 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 #quarkus.http.root-path=/api
 
-quarkus.rest-client.webuntis.url=https://mese.webuntis.com/WebUntis/jsonrpc.do
-quarkus.rest-client.webuntis.scope=javax.inject.Singleton
+auth.school.name=htbla linz leonding
+auth.untis.server=mese.webuntis.com
 
 
 quarkus.http.cors=true
