--- a/franklyn-frontend/package.json
+++ b/franklyn-frontend/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.1",
+    "bootstrap-select": "^1.13.18",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
