--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,6 @@ quarkus.tls.trust-all=true
 #quarkus.http.root-path=/api
 
 quarkus.http.cors=true
+
+quarkus.rest-client.webuntis.url=https://mese.webuntis.com/WebUntis/jsonrpc.do?school=htbla%20linz%20leonding
+quarkus.rest-client.webuntis.scope=javax.inject.Singleton
