fra-44 authentication works (getTeachers still in progress)

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,2 +1,2 @@
 PATHOFSCREENSHOT=<<Directory for screenshots>>
-WEBUNTISSTRING=https://mese.webuntis.com/WebUntis/jsonrpc.do?school=<<YOUR SCHOOL>>
+WEBUNTISSTRING=https://mese.webuntis.com/WebUntis/jsonrpc.do
