--- a/franklyn-frontend/package.json
+++ b/franklyn-frontend/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^3.1.1",
     "font-awesome": "^4.7.0",
     "mdb-angular-ui-kit": "^2.3.0",
+    "ng-image-fullscreen-view": "^3.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
