--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.rest-client.client-api.url=http://localhost:8080
-quarkus.rest-client.client-api.scope=javax.inject.Singleton
+%prod.quarkus.rest-client.client-api.url=http://localhost:8080
+%prod.quarkus.rest-client.client-api.scope=javax.inject.Singleton
 
 quarkus.tls.trust-all=true
 
