--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 quarkus.tls.trust-all=true
 
 quarkus.banner.enabled=false
+
+quarkus.quartz.start-mode=forced
+
+quarkus.package.type=uber-jar
+quarkus.package.add-runner-suffix=false
