--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,6 +28,13 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/ByteDream/untis4j</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -82,9 +89,7 @@
         <dependency>
             <groupId>org.bytedream</groupId>
             <artifactId>untis4j</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope>
-            <systemPath>${pom.basedir}/lib/untis4j-1.3.0-withDependencies.jar</systemPath>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
     <build>
