--- a/gatling-test/pom.xml
+++ b/gatling-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.htl</groupId>
-    <artifactId>frontend-test</artifactId>
+    <artifactId>gatling-test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
