--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-%prod.quarkus.rest-client.client-api.url=http://localhost:8080
-#%prod.quarkus.rest-client.client-api.url=https://student.cloud.htl-leonding.ac.at/t.melcher
+%dev.quarkus.rest-client.client-api.url=http://localhost:8080
+%prod.quarkus.rest-client.client-api.url=https://student.cloud.htl-leonding.ac.at/t.melcher
 quarkus.rest-client.client-api.scope=javax.inject.Singleton
 
 quarkus.tls.trust-all=true
