--- a/franklyn-client/pom.xml
+++ b/franklyn-client/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
