fra-78 modify .env.template-file

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,12 @@
-PATHOFSCREENSHOT=<<Directory for screenshots>>
+PATHOFSCREENSHOT=<Folder for screenshots>
+CURRENT_HOST=<current Host>
+CURRENT_ROOT_DIRECTORY=<Folder for screenshots>
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=app
+quarkus.datasource.password=app
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://database-svc:5432/db
+
+auth.school.name=htbla linz leonding
+auth.untis.server=mese.webuntis.com
