--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,16 @@ quarkus.http.limits.max-body-size=700M
 
 quarkus.tls.trust-all=true
 
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=app
+quarkus.datasource.password=app
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://database-svc:5432/db
 #
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+auth.school.name=htbla linz leonding
+auth.untis.server=mese.webuntis.com
 
 quarkus.http.cors=true
