--- a/franklyn-frontend/package.json
+++ b/franklyn-frontend/package.json
@@ -11,20 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/cdk": "^13.3.9",
+    "@angular/cdk": "^13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/localize": "~13.3.0",
-    "@angular/material": "^13.3.9",
+    "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.11.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.10.3",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^3.1.1",
     "font-awesome": "^4.7.0",
