--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.datasource.username=app
 quarkus.datasource.password=app
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://database-svc:5432/db
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
 #
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
