--- a/franklyn-frontend/package.json
+++ b/franklyn-frontend/package.json
@@ -32,6 +32,7 @@
     "bootstrap-icons": "^1.10.3",
     "bootstrap-select": "^1.13.18",
     "chart.js": "^3.1.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "mdb-angular-ui-kit": "^2.3.0",
     "ng-image-fullscreen-view": "^3.0.3",
@@ -43,6 +44,7 @@
     "@angular-devkit/build-angular": "~13.3.1",
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
