fra-120 download video local and patroullie

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -4,3 +4,5 @@ CURRENT_ROOT_DIRECTORY=<Folder for screenshots>
 
 auth.school.name=htbla linz leonding
 auth.untis.server=mese.webuntis.com
+
+FFMPEG_PATH=/usr/bin/ffmpeg
