--- a/deployment.yml
+++ b/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db-deployment
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   replicas: 1
   selector:
@@ -31,7 +31,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   replicas: 1
   selector:
@@ -57,7 +57,7 @@ spec:
           image: ghcr.io/htl-leonding-project/franklyn-quarkus-backend
           env:
             - name: PATHOFSCREENSHOT
-              value: /t.melcher/tmp/file-upload/exams
+              value: /t.stuetz/tmp/file-upload/exams
             - name: CURRENT_HOST
               value: https://student.cloud.htl-leonding.ac.at/
             - name: CURRENT_ROOT_DIRECTORY
@@ -66,7 +66,7 @@ spec:
               value: /usr/bin/ffmpeg
           volumeMounts:
             - name: shared-data
-              mountPath: /t.melcher/tmp/file-upload/exams
+              mountPath: /t.stuetz/tmp/file-upload/exams
           ports:
             - containerPort: 8080
 ---
@@ -74,7 +74,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   replicas: 1
   selector:
@@ -96,7 +96,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-svc
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   ports:
     - port: 80
@@ -110,7 +110,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: imageserver-svc
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   ports:
     - port: 80
@@ -124,7 +124,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-svc
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   ports:
     - port: 80
@@ -138,7 +138,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-svc
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
 spec:
   ports:
     - port: 5432
@@ -152,7 +152,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: backend-ingress
-  namespace: student-t-melcher
+  namespace: student-t-stuetz
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
@@ -160,21 +160,21 @@ spec:
     - host: student.cloud.htl-leonding.ac.at
       http:
         paths:
-          - path: /t.melcher/api(/|$)(.*)$
+          - path: /t.stuetz/api(/|$)(.*)$
             pathType: Prefix
             backend:
               service:
                 name: backend-svc
                 port:
                   number: 80
-          - path: /t.melcher/tmp/file-upload/exams(/|$)(.*)$
+          - path: /t.stuetz/tmp/file-upload/exams(/|$)(.*)$
             pathType: Prefix
             backend:
               service:
                 name: imageserver-svc
                 port:
                   number: 80
-          - path: /t.melcher/franklyn(/|$)(.*)$
+          - path: /t.stuetz/franklyn(/|$)(.*)$
             pathType: Prefix
             backend:
               service:
