--- a/franklyn-client/.env
+++ b/franklyn-client/.env
@@ -1,2 +1,2 @@
 %dev.quarkus.rest-client.client-api.url=http://localhost:8080
-%prod.quarkus.rest-client.client-api.url=https://student.cloud.htl-leonding.ac.at/t.stuetz
+%prod.quarkus.rest-client.client-api.url=https://student.cloud.htl-leonding.ac.at/t.stuetz/franklyn3
