--- a/franklyn-client/pom.xml
+++ b/franklyn-client/pom.xml
@@ -29,6 +29,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.5.1-2</version>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
