--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,3 +15,6 @@ auth.school.name=htbla linz leonding
 auth.untis.server=mese.webuntis.com
 
 quarkus.http.cors=true
+CURRENT_HOST=localhost
+CURRENT_ROOT_DIRECTORY=./
+PATHOFSCREENSHOT=./
