--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,6 +30,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.5.1-2</version>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-openapi</artifactId>
         </dependency>
@@ -101,6 +106,8 @@
             <artifactId>ffmpeg</artifactId>
             <version>0.7.0</version>
         </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
