display images on the client

--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 quarkus.rest-client.client-api.scope=javax.inject.Singleton
 quarkus.tls.trust-all=true
-
 quarkus.banner.enabled=false
-
 quarkus.quartz.start-mode=forced
-
+quarkus.http.cors=true
 quarkus.package.type=uber-jar
 quarkus.package.add-runner-suffix=false
