--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.quartz.start-mode=forced
 quarkus.http.cors=true
 quarkus.package.type=uber-jar
 quarkus.package.add-runner-suffix=false
+quarkus.http.port = 8081
