--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,11 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://database-svc:5432/db
+
+%prod.quarkus.datasource.username=${POSTGRES_USER}
+%prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
+%prod.quarkus.datasource.jdbc.url=${DB_URL}
+
 #
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
