--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       POSTGRES_USER: app
       POSTGRES_PASSWORD: app
-      POSTGRES_DB: db-postgres
+      POSTGRES_DB: db
     ports:
       - 5432:5432
     volumes:
