--- a/k8s/database/service.yaml
+++ b/k8s/database/service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: franklyn-db
   name: franklyn-db-service
-  namespace: student-it190204
+  namespace: default
 spec:
   ports:
     - port: 5432
