--- a/k8s/database/pvc.yaml
+++ b/k8s/database/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   finalizers:
   - kubernetes.io/pvc-protection
   name: franklyn-pvc
-  namespace: default
+  namespace: student-it190204
 spec:
     accessModes:
       - ReadWriteMany
