--- a/k8s/database/deployment.yaml
+++ b/k8s/database/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: franklyn-db
   name: franklyn-db
-  namespace: default
+  namespace: student-it190204
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
