--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,16 +3,13 @@ quarkus.tls.trust-all=true
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
-%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db-postgres
 %prod.quarkus.datasource.username=${POSTGRES_USER}
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
-#
+
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
-auth.school.name=htbla linz leonding
-auth.untis.server=mese.webuntis.com
+
 quarkus.http.cors=true
-CURRENT_HOST=localhost
-CURRENT_ROOT_DIRECTORY=./
-PATHOFSCREENSHOT=./
+
