--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,20 @@
-FROM openjdk:17-alpine
+FROM maven
 
 WORKDIR /app
 
 # Copy Maven Wrapper files
-COPY .mvn .mvn
 
 # Copy the rest of the application files
 COPY lib lib
 COPY src src
 COPY pom.xml pom.xml
-COPY mvnw mvnw
+
 
 ENV DB_URL="jdbc:postgresql://localhost:5432/db" \
     POSTGRES_USERNAME="app" \
     POSTGRES_PASSWORD="app"
 # Build the application
-RUN ["chmod", "+x", "mvnw"]
-RUN ["./mvnw", "clean", "package", "-DskipTests"]
+RUN ["mvn", "clean", "package", "-DskipTests"]
 
 # Run the application
 CMD ["java", "-jar", "./target/quarkus-app/quarkus-run.jar"]
