--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     depends_on:
       - db
     container_name: franklyn_backend
-    image: ghcr.io/htl-leonding-project/franklyn-application-server-image:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: franklyn-application-server-image
     ports:
       - 8080:8080
     environment:
