--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,9 +7,11 @@ quarkus.datasource.password=app
 %prod.quarkus.datasource.username=${POSTGRES_USER}
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
+quarkus.http.root-path=/api
+quarkus.http.access-log.enabled=true
 
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
-
 quarkus.http.cors=true
+
 
