--- a/k8s/application-server/ingress.yml
+++ b/k8s/application-server/ingress.yml
@@ -1,10 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: franklyn-ingress
-  namespace: student-it190204
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  name: nginx-ingress
+  namespace: student-it190204
 spec:
   rules:
     - host: student.cloud.htl-leonding.ac.at
@@ -16,21 +16,12 @@ spec:
               service:
                 name: nginx
                 port:
-                  name: http
+                  number: 80
 
-          - path: /it190204/franklyn
+          - path: /it190204/franklyn/(.*)$
             pathType: Prefix
             backend:
               service:
-                name: nginx
+                name: franklyn-application-server
                 port:
-                  name: http
-
-          - path: /it190204/franklyn/api(/|$)(.*)$
-            pathType: Prefix
-            backend:
-              service:
-                name: franklyn-application-server-service
-                port:
-                  name: http
-
+                  number: 8080
