feat(backend): backend logic for client login (#44, #96)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,8 +8,9 @@ quarkus.datasource.password=app
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
 
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
 
 quarkus.http.cors=true
-
