--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-quarkus.rest-client.client-api.scope=javax.inject.Singleton
+# Your configuration properties
+quarkus.rest-client.exam-api.url=http://localhost:8080
+quarkus.rest-client.exam-api.scope=javax.inject.Singleton
 quarkus.tls.trust-all=true
 quarkus.banner.enabled=false
 quarkus.quartz.start-mode=forced
