--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: franklyn_backend
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: src/main/docker/Dockerfile
     image: franklyn-application-server-image
     ports:
       - 8080:8080
