--- a/backend/src/main/docker/Dockerfile
+++ b/backend/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:17-jre
 
 RUN mkdir -p /opt/application
-COPY *-runner.jar /opt/application/backend.jar
+COPY ../../../target/deploy/franklyn-application-server-image.jar /opt/application/backend.jar
 CMD [ "java", "-jar", "backend.jar" ]
 WORKDIR /opt/application
