feat(deployment) repair borken deployment, so that the jar file could run on k8s (#99)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 quarkus.http.limits.max-body-size=700M
 quarkus.tls.trust-all=true
+quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
@@ -9,9 +10,7 @@ quarkus.datasource.password=app
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
 quarkus.http.root-path=/api
 quarkus.http.access-log.enabled=true
-
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
-
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.database.generation=update
 quarkus.http.cors=true
