feat(deployment) build uber-jar with config (#99)

--- a/backend/src/main/docker/Dockerfile
+++ b/backend/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:17-jre
 
 RUN mkdir -p /opt/application
-COPY *quarkus-run.jar /opt/application/quarkus-run.jar
+COPY *-runner.jar /opt/application/quarkus-run.jar
 CMD [ "java", "-jar", "quarkus-run.jar" ]
 WORKDIR /opt/application
