fix(Frontend): add properties for exam-api

--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Your configuration properties
-quarkus.rest-client.exam-api.url=http://localhost:8080
+%dev.quarkus.rest-client.exam-api.url=http://localhost:8080
+%prod.quarkus.rest-client.exam-api.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
 quarkus.rest-client.exam-api.scope=javax.inject.Singleton
 quarkus.tls.trust-all=true
 quarkus.banner.enabled=false
