--- a/k8s/nginx/default.conf
+++ b/k8s/nginx/default.conf
@@ -1,3 +1,4 @@
+
 server {
     listen 80;
     root /usr/share/nginx/html;
@@ -9,5 +10,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host:$server_port;
+
+
+        real_ip_header X-Forwarded-For;
+
     }
 }
