--- a/k8s/nginx/default.conf
+++ b/k8s/nginx/default.conf
@@ -12,7 +12,10 @@ server {
         proxy_set_header Host $host:$server_port;
 
 
-        real_ip_header X-Forwarded-For;
+      set_real_ip_from 127.0.0.1;
+      set_real_ip_from 192.168.2.1;
+      real_ip_header X-Forwarded-For;
+      real_ip_recursive on;
 
     }
 }
