feat(backend) fix the bug with ip addresses on leocloud (close #97)

--- a/k8s/application-server/service.yaml
+++ b/k8s/application-server/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: franklyn-application-server
 
 spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Local
   ports:
     - port: 8080
       targetPort: 8080
