--- a/k8s/nginx/default.conf
+++ b/k8s/nginx/default.conf
@@ -4,20 +4,14 @@ server {
     root /usr/share/nginx/html;
     rewrite_log on;
     error_log /dev/stdout debug;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
 
     location /api/ {
         proxy_pass http://franklyn-application-server:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host:$server_port;
-
-        set_real_ip_from 127.0.0.1;
-        set_real_ip_from 192.168.2.1;
-        real_ip_header X-Real-IP;
-        real_ip_recursive on;
-
-        # Additional headers for the backend server, if needed
-        proxy_set_header X-Forwarded-Proto $scheme;
 
     }
 }
