feat(Streaming Server): create exam folder in streaming sever after exam creation (close #110)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 quarkus.http.limits.max-body-size=700M
 quarkus.tls.trust-all=true
 quarkus.package.type=uber-jar
+%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/api
+# %prod.quarkus.rest-client.streaming-server.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
@@ -8,6 +10,7 @@ quarkus.datasource.password=app
 %prod.quarkus.datasource.username=${POSTGRES_USER}
 %prod.quarkus.datasource.password=${POSTGRES_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=${DB_URL}
+quarkus.rest-client.exam-api.scope=javax.inject.Singleton
 quarkus.http.root-path=/api
 quarkus.http.access-log.enabled=false
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
